Dentko in process

--- a/dentko/contacts.html
+++ b/dentko/contacts.html
@@ -103,63 +103,107 @@
         </div>
     </nav>
     <main class="main">
-        <section class="text text_fullscreen">
-            <div class="uk-container">
-                <h2 class="uk-h1">Врачи клиники Дентко: специалисты, которым доверяют</h2>
-                <p class="uk-text uk-text-medium uk-text-bold">Оплатить услуги стоматологии "Дентко" можно наличными денежными средствами и банковскими платежными карточками на ресепшене после приема врача, а также оформить рассрочку на оказанные услуги.</p>
-                <p class="uk-text uk-text-medium">Мечта о белоснежной улыбке сейчас осуществима для каждого. Ведь современная стоматология готова предложить вам услуги восстановления зубного ряда даже при полной адентии. Опытный врач всегда подберет подходящее решение. Вот только рассчитывать на дешевизну не приходится. Ведь цены определяются отнюдь не амбициями клиники, а рядом факторов, влияющих на качество лечения и уровень оказания услуг:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">Материалы.</span> В отличие от государственных клиник, «Дентко» использует импортные композиты и керамику, цена которых неизбежно привязана к евро;</p>
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">В стоимость включается и амортизация оборудования.</span> Комфортные кресла, бормашины, не перегревающие эмаль и гарантирующие сохранность ваших зубов и защиту их от инфекции, также частично учитываются в стоимости лечения;</p>
-                    <p class="uk-text text__item"><span class="uk-text uk-text-bold">Работа специалистов.</span> В клинике Дентко работают врачи 1 и высшей квалификационной категории, а в нашей лаборатории – опытные зубные техники. Цена их труда также отличается от зарплаты студента-практиканта.</p>
-                </div>
-                <p class="uk-text uk-text-medium">В нашей стоматологической клинике используется современное оборудование, которое позволяет врачу тщательно контролировать ход и результат лечения. Это ваш гарант того, что зуб под коронкой не заболит, а пломба не выпадет спустя месяц. Согласитесь, это дорогого стоит! Поэтому иногда лучше вылечить зуб в рассрочку, чем утратить его через полгода-год.</p>
-                <p class="uk-text uk-text-medium">Протезирование, реставрация, установка имплантов и виниров – услуги, которые оплатить сразу может не каждый клиент. Понимая это, мы предоставляем возможность оплаты в рассрочку и с помощью банковского кредита.</p>
-            </div>
-        </section>
-        <section class="about">
+        <section class="about about_padding">
             <div class="uk-container">
                 <div class="uk-section">
                     <div class="uk-grid-match uk-child-width-1-2" uk-grid>
                         <div class="about__side">
-                            <div class="about__img-wrap">
-                                <img class="about__img" src="./img/about_payment.jpg" uk-img>
+                            <h2 class="uk-h1">Контакты ООО "Дентко-мед"</h2>
+                            <div class="about__section">
+                                <h3 class="about__section-header">Адрес и реквизиты:</h3>
+                                <p class="uk-text uk-text-small">220005, г. Минск, пр-кт. Независимости, 58 ТЦ "Московско-Венский", 3 этаж, п. 142</p>
+                                <p class="uk-text uk-text-small"><span class="uk-text uk-text-small uk-text-bold">Р/сч:</span> BY75TECN30128004200120000000 в ОАО "Технобанк" код TECNBY22</p>
+                                <p class="uk-text uk-text-small">УНП 191081363</p>
+                            </div>
+                            <div class="uk-flex uk-flex-between about__row">
+                                <div class="uk-flex uk-flex-column uk-flex-between about__col">
+                                    <div class="about__section">
+                                        <h3 class="uk-text-bold about__section-header">Режим работы:</h3>
+                                        <div class="footer__card-body uk-flex uk-flex-between">
+                                            <div class="footer__card-col uk-flex uk-flex-column">
+                                                <span class="uk-text-bold">пн-пт:</span>
+                                                <span class="uk-text-bold">сб:</span>
+                                                <span class="uk-text-bold">вс:</span>
+                                            </div>
+                                            <div class="footer__card-col uk-flex uk-flex-column">
+                                                <span>09:00 — 21:00</span>
+                                                <span>09:00 — 20:00</span>
+                                                <span>09:00 — 17:00</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="about__section">
+                                        <h3 class="uk-text-bold about__section-header">Телефоны:</h3>
+                                        <div class="uk-flex uk-flex-column">
+                                            <a href="tel:+375291101212" class="footer__dd-link"><img src="./img/operator1.png">+375 (29) 110-12-12</a>
+                                            <a href="tel:+375336601313" class="footer__dd-link"><img src="./img/operator2.png">+375 (33) 660-13-13</a>
+                                            <a href="tel:+375251101212" class="footer__dd-link"><img src="./img/operator3.png">+375 (25) 110-12-12</a>
+                                            <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                                            <a href="tel:+375172844511" class="footer__dd-link"><img src="./img/operator4.png">+375 (17) 284-45-11</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="uk-flex uk-flex-column uk-flex-between about__col">
+                                    <div class="about__section">
+                                        <h3 class="uk-text-bold about__section-header">Мы в соцсетях:</h3>
+                                        <div class="uk-flex-inline uk-flex-between">
+                                            <a href="#" class="header__link"><img src="./img/facebook.png" alt="Иконка" class="header__link-img"></a>
+                                            <a href="#" class="header__link"><img src="./img/vk.png" alt="Иконка" class="header__link-img"></a>
+                                            <a href="#" class="header__link"><img src="./img/instagram.png" alt="Иконка" class="header__link-img"></a>
+                                        </div>
+                                    </div>
+                                    <div class="about__section">
+                                        <h3 class="uk-text-bold about__section-header">Другие способы:</h3>
+                                        <div class="uk-flex-inline uk-flex-between">
+                                            <a href="#" class="header__link"><img src="./img/telegram.png" alt="Иконка" class="header__link-img"></a>
+                                            <a href="#" class="header__link"><img src="./img/viber.png" alt="Иконка" class="header__link-img"></a>
+                                            <a href="#" class="header__link"><img src="./img/whatsapp.png" alt="Иконка" class="header__link-img"></a>
+                                        </div>
+                                        <div class="uk-flex uk-flex-column about__links">
+                                            <span class="uk-text uk-text-small uk-text-bold">E-mail: <a href="#" class="about__link">info@dentko.by</a></span>
+                                            <span class="uk-text uk-text-small uk-text-bold">Skype: <a href="#" class="about__link">dentko.stom.admin</a></span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="about__side">
-                            <h2 class="uk-h1">Стоматология в рассрочку – это выгодно</h2>
-                            <p class="uk-text-normal">Конечно, любую сумму можно накопить. Но вылечить зубы в рассрочку – в разы выгоднее. И вот почему:</p>
-                            <ul class="uk-list">
-                                <li>На начальной стадии кариес лечится за 20 минут – достаточно удалить пораженные бактериями ткани и установить пломбу;</li>
-                                <li>При глубоком кариесе объем работ значительно увеличивается. Врачу предстоит провести эндодоническое лечение пульпита, запломбировать каналы и восстановить коронку зуба. И стоить это будет вдвое дороже;</li>
-                                <li>Продолжая терпеть боль, вы рискуете заполучить периодонтит и прибавить к сумме еще и лечение корней;</li>
-                                <li>А в самых запущенных случаях придется оплатить имплант, его установку и изготовление коронки для него.</li>
-                            </ul>
-                            <p class="uk-text-normal">Чем быстрее вы обращаетесь к врачу, тем меньше приходится платить. А с учетом того, что лечение зубов в рассрочку в Минске не подразумевает начисления процентной ставки – это очень выгодное решение. При этом сумму можно разделить на 6 равных частей и выплатить в течение полугода. Если размер ежемесячного платежа для вас слишком велик, можно воспользоваться программой банковского кредитования и распределить сумму на более длительный срок.</p>
-                            <button class="uk-button uk-button-default button">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
+                            <div class="about__img-wrap about__img-wrap_another">
+                                <img class="about__img" src="./img/door.jpg" uk-img>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="text text_fullscreen">
+        <section class="map">
             <div class="uk-container">
-                <h2 class="uk-h1">Стоматология в рассрочку в Минске</h2>
-                <p class="uk-text uk-text-medium">Один из принципов современной стоматологии – это комфорт. Касается он и предоставления финансовых услуг. Так, чтобы получить деньги на лечение, вам не придется самостоятельно обращаться в банк – достаточно записаться на консультацию стоматолога-терапевта в «Дентко»:</p>
-                <div class="uk-column-1-2 uk-width-child-1-2">
-                    <p class="uk-text text__item">Врач осмотрит полость рта, подберет методы лечения и протезирования, распишет для вас их стоимость;</p>
-                    <p class="uk-text text__item">После положительного ответа будет оформлен договор на кредит или рассрочку, а также на оказание стоматологических услуг;</p>
-                    <p class="uk-text text__item">Сразу после согласования цены на весь комплекс услуг, наша бухгалтерия выпишет счет-фактуру, сделает копии вашего паспорта и направит пакет документов в банк;</p>
-                    <p class="uk-text text__item">График лечения вы сможете согласовать с врачом, подобрав удобные для вас дни и часы. Мы работаем до 21.00 в будни и в выходные, поэтому вы сможете выбрать комфортные часы приема без пропуска работы и важных событий в жизни вашей семьи.</p>
-                </div>
-                <p class="uk-text uk-text-medium">А главное – это не просто стоматологи, а люди, которые вникают в ситуацию каждого пациента и всегда готовы подобрать персональные решения.</p>
+                <h2 class="uk-h1">Карта проезда:</h2>
+                <iframe class="map__item" src="https://www.google.com/maps/d/embed?mid=1vSW3B_R2RqL8zns7yHyZhaQSs1YHeKnE" width="100%" height="480"></iframe>
+                <!-- <iframe class="map__item" src="https://yandex.ru/map-widget/v1/?um=constructor%3A6393c59ee3078ee81c89398dfd411230c56ec46d99f1db7f6ab6c7208a4268ab&amp;source=constructor" width="100%" height="573" frameborder="0"></iframe> -->
             </div>
         </section>
-        <section class="agit">
+        <section class="form form_fullscreen">
             <div class="uk-container">
-                <div class="uk-flex uk-flex-between uk-flex-middle">
-                    <p class="uk-text-bold uk-text-large">Запишитесь на прием к врачу в «Дентко» и получите план лечения и протезирования ваших зубов!</p>
-                    <button class="uk-button uk-button-default button">Записаться на прием</button>
+                <div class="form__body">
+                    <h2 class="uk-h2">Оставить отзыв</h2>
+                    <p class="uk-text-meta">Пожалуйста, проверьте правильность введенных данных.</p>
+                    <form class="uk-flex uk-flex-bottom">
+                        <div class="form__inputs">
+                            <div class="uk-flex uk-flex-between form__row">
+                                <input class="uk-input" type="text" placeholder="Ваше имя">
+                                <input class="uk-input" type="text" placeholder="Ваше имя">
+                                <input class="uk-input" type="email" placeholder="Ваш e-mail">
+                            </div>
+                            <div class="form__row">
+                                <textarea class="form__textarea" placeholder="Напишите ваш вопрос" rows="1"></textarea>
+                            </div>
+                        </div>
+                        <div class="form__submit">
+                            <p class="uk-text uk-text-small">Email служит для оповещения об ответе, он не будет опубликован на сайте.</p>
+                            <button class="uk-input" type="submit">Оставить отзыв</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
